--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Example Website</title>
+	<title>EvaSUE Mattu University</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" />
@@ -17,11 +17,13 @@
 </nav>
 <div class="banner">
   <h1>We are coming soon</h1>
-  <p class="sub-text">Mattu University EvaSUE Fellowship team</p>
+  <p class="sub-text">Mattu University EvaSUE Fellowship</p>
+  <p></p>
   <div class="social-icons">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i id="tel" class="fab fa-telegram"></i></a>
+    <a href="#"><i id="fac" class="fab fa-facebook"></i></a>
+    <a href="#"><i id="twi" class="fab fa-twitter"></i></a>
+    <a href="#"><i id="ins" class="fab fa-instagram"></i></a>
   </div>
 </div>
 </body>
