--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<title>EvaSUE Mattu University</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" /> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <nav>
-  <a class="logo" href="#">MEUFELLOW</a>
-  <a href="#">Home</a>
+  <a class="logo" href="#"> <img class="imgLogo" src="mauu.png" alt=""> </a>
+  <a id="hom" href="#">Home</a>
   <a href="#">About</a>
   <a href="#">Gallery</a>
   <a href="#">Contact</a>
@@ -18,12 +19,12 @@
 <div class="banner">
   <h1>We are coming soon</h1>
   <p class="sub-text">Mattu University EvaSUE Fellowship</p>
-  <p></p>
+	<p id="follw">Follow Us!</p>
   <div class="social-icons">
-    <a href="#"><i id="tel" class="fab fa-telegram"></i></a>
-    <a href="#"><i id="fac" class="fab fa-facebook"></i></a>
-    <a href="#"><i id="twi" class="fab fa-twitter"></i></a>
-    <a href="#"><i id="ins" class="fab fa-instagram"></i></a>
+    <a href="#"><i id="tel" class="fa fa-telegram"></i></a>
+    <a href="#"><i id="fac" class="fa fa-facebook"></i></a>
+    <a href="#"><i id="twi" class="fa fa-twitter"></i></a>
+    <a href="#"><i id="ins" class="fa fa-instagram"></i></a>
   </div>
 </div>
 </body>
